@@ -5,26 +5,30 @@ import com.tribune.demo.reporting.db.entity.Report;
 import com.tribune.demo.reporting.db.entity.ReportField;
 import com.tribune.demo.reporting.db.entity.ReportTable;
 
-import java.util.stream.Collectors;
 
 public class BadReportEntryException extends RuntimeException {
+
+    public BadReportEntryException(String message) {
+        super(message);
+    }
 
     public BadReportEntryException(String entry, Report report) {
         super(
                 String.format("Bad Request Structure. Possible error at [%s]. " +
-                                "Data must include the following lists: %s and the following fields: %s. " +
-                                "And Other unmatched entries are ignored.",
+                              "Data must include the following lists: %s and the following fields: %s. " +
+                              "And Other unmatched entries are ignored.",
                         entry,
-                        report.getReportTables().stream().map(ReportTable::getName).collect(Collectors.toList()),
-                        report.getReportFields().stream().map(ReportField::getName).collect(Collectors.toList()))
+                        report.getReportTables().stream().map(ReportTable::getName).sorted().toList(),
+                        report.getReportFields().stream().map(ReportField::getName).sorted().toList())
         );
     }
 
-    public BadReportEntryException(String entry,String message) {
+
+    public BadReportEntryException(String entry, String message) {
         super(
                 String.format("Bad Request Structure. Possible error at [%s]. " +
-                                "%s",
-                        entry,message)
+                              "%s",
+                        entry, message)
         );
     }
 }
